--- a/src/components/Styling/header.css
+++ b/src/components/Styling/header.css
@@ -4,9 +4,11 @@
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
-    background-color: var(--body-color);
+    background-color: rgb(0, 0, 0);
 }
-
+.nav.container {
+    color: white !important; 
+}
 .nav {
     height: calc(var(--header-height) + 1.5rem);
     display: flex;
@@ -17,7 +19,7 @@
 
 .nav__logo,
 .nav__toggle {
-    color: var(--title-color);
+    color: white;
     font-weight: var(--font-medium);
 }
 
@@ -31,7 +33,7 @@
     flex-direction:column;
     align-items: center;
     font-size: var(--small-font-size);
-    color: var(--title-color);
+    color: white;
     font-weight: var(--font-medium);
     transition: .3s;
 }
